design of pages

--- a/data.html
+++ b/data.html
@@ -190,14 +190,19 @@
 					<br />
 
 					<i>How many movies are represented by country in the IMDB dataset? </i>
-					<img width=500px height=auto src="./Preprocess/figures/imdb_movies_by_country.jpeg">
+					<div class="container">
+						<row>
+							<img width=500px height=auto src="./Preprocess/figures/imdb_movies_by_country.jpeg">
+						</row>
 				</p>
 			</div>
 
 			<div class="mastfoot">
-				<p>Data Visualisation project </p>
-
+				<div class="inner" style="position:relative; top:-20px;">
+					<p>Data Visualisation project </p>
+				</div>
 			</div>
+
 		</div>
 
 	</div>
