--- a/description.html
+++ b/description.html
@@ -97,11 +97,11 @@
 					anybody looking for new visualisation of the world of film awards.</p>
 
 
-				<div class="mastfoot">
-					<div class="inner">
-						<p>Data Visualisation project </p>
+					<div class="mastfoot">
+						<div class="inner" style="position:relative; top:-20px;">
+							<p>Data Visualisation project </p>
+						</div>
 					</div>
-				</div>
 			</div>
 
 		</div>
