--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
 <body>
 
 	<div class="site-wrapper">
-
 		<div class="site-wrapper-inner">
-
 			<div class="cover-container">
-
 				<div class="masthead clearfix">
 					<div class="inner">
 						<h3 class="masthead-brand">What can we learn from Cinema?</h3>
@@ -136,20 +133,18 @@
 					<div class="scroll-indicator" id="exploratory" data-scroll-indicator-title="Exploratory"></div>
 				</div>
 				<h3 class='parties'>Exploratory -Evolution of genres and awards in a specific country</h3>
-				<h5>Main goal</h5>
-				<p>
-					The section aims to correlate the films produced by country according to their genre and the awards
-					received over time.
-					</br>
-					<i>Has a country been able to change the type of film it produces in order to have a better
-						cinematic impact?</i>
-
-				</p>
-
-				<div class="card">
-					<div class="card-body">
-						<h3 class="card-title">Pic of history impact in Iraq</h3>
-						<p class="card-text">Observe a pic of an historical film production around 2011
+				<div class='inner'>
+					<h4>Main goal</h4>
+					<p class="sous-partie">
+						The section aims to correlate the films produced by country according to their genre and the awards
+						received over time.
+						</br>
+						<i>Has a country been able to change the type of film it produces in order to have a better
+							cinematic impact?</i>
+					<h4>Context</h4>
+					<div class="sous-partie">
+						<h5>Pic of history impact in Iraq</h5>
+						<p>Observe a pic of an historical film production around 2011
 							-2012, only time this kind of film was produced and primed.
 							The corresponding film is Bahman Ghobadi's 'Fasle kargadan', a big success film with 6 wins
 							and 6 nominations in
@@ -157,19 +152,15 @@
 							Film Festival (2012). <br />
 							Marker of an intellectual revolution at work in Iraq through cinema.
 						</p>
-					</div>
-					<div class="card-body">
-						<h3 class="card-title">Strong diversity in France</h3>
-						<p class="card-text">
+						<h5>Strong diversity in France</h5>
+						<p>
 							It can be noted that France produces almost all possible genres and each of these genres
 							follow the same evolution, with the renown in agreement. <br\>
-								More films, more renown. We can therefore deduce that in addition to being a major film
-								producer, the films are of high quality.
+							More films, more renown. We can therefore deduce that in addition to being a major film
+							producer, the films are of high quality.
 						</p>
-					</div>
-					<div class="card-body">
-						<h3 class="card-title">Comedia in Russia</h3>
-						<p class="card-text">
+						<h5>Comedia in Russia</h5>
+						<p>
 							We can observe that comedy is a very widespread genre in the films produced (click on By
 							proportion)
 							Soviet comedy films are part of the world's film heritage.
@@ -178,8 +169,6 @@
 						</p>
 					</div>
 				</div>
-				</p>
-				</p>
 
 
 
@@ -198,8 +187,8 @@
 					<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
 					<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
 				</div>
-				<h5>How to use</h5>
-				<p>
+				<h4>How to use</h4>
+				<p class="sous-partie">
 					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
 					<br />
 					You can zoom in each graph by dragging a selecting box to extend the desired zone. <br />
@@ -212,7 +201,9 @@
 				<div>
 					<div class="scroll-indicator" id="resume" data-scroll-indicator-title="Conclusion"></div>
 				</div>
-				<h3 class='parties'>Conclusion - Overview of countries' trends through cinema awards</h3>
+
+
+				<h3 class='parties'>Conclusion - Overview of countries trends through cinema awards</h3>
 				<div class='inner'>
 					<p>
 						After accumulating the general information with the two above visualizations, one may ask
@@ -221,8 +212,8 @@
 						film ceremonies. What is the proportion of french drama movies that have won in the 60's? How many
 						comedy movies have been nominated these past 10 years in the USA?
 					</p>
-					<h5>How to use</h5>
-					<p>
+					<h4>How to use</h4>
+					<p class="sous-partie">
 						You can explore the questions stated above as well as many others in the visualization presented just below.
 						You can first start by selecting some time range you want to explore by clicking on one of the many ranges in the timeline.
 						You can then hover on one colorful line to get more details about the proportion of movies sharing the attributes where the line goes through.
@@ -243,11 +234,9 @@
 							<button class="rangeSets" onclick="change_range(2000)"> 2000-2010 </button>
 							<button class="rangeSets" onclick="change_range(2010)"> 2010-2020 </button>
 					</div>
-
 					<div class="parallelSet" id="vis"></div>
-
-
 				</div>
+
 
 				<div class="mastfoot">
 					<div class="inner" style="position:relative; top:-20px;">
@@ -256,9 +245,7 @@
 				</div>
 
 			</div>
-
 		</div>
-
 	</div>
 
 	<!--<script src="map_visu.js"></script>-->
