--- a/team.html
+++ b/team.html
@@ -37,8 +37,8 @@
 					</div>
 				</div>
 
-				<div class="inner">
-					<h4 class="cover-heading">Introduction</h4>
+				<div class="container">
+					<h4 class="cover-heading-team">Introduction</h4>
 					<p>
 						This visualization unveils the deepest mysteries of our world,
 						showing the facts through the lens of statistical data anlysis
@@ -92,7 +92,7 @@
 			</div>
 
 			<div class="mastfoot">
-				<div class="inner">
+				<div class="inner" style="position:relative; top:-20px;">
 					<p>Data Visualisation project </p>
 				</div>
 			</div>
