--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 						</nav>
 					</div>
 				</div>
+
 				<!--Anchor point (scroll indicator-->
 				<div>
 					<div class="scroll-indicator" id="presentation" data-scroll-indicator-title="Context"></div>
 				</div>
+
 				<h3 class="parties">Context- Which countries are represented in which
 					film ceremonies over time </h3>
 				<div class="jumbotron jumbotron-fluid">
@@ -121,9 +123,6 @@
 						<div id="legend" style="visibility: hidden;"></div>
 					</div>
 
-					<!-- EXEMPLE SVG
-					<svg id="countries_cat_viz" width="600" height="500"></svg>
-					<img width=700px height=auto src="./Preprocess/figures/context.PNG">-->
 
 				</div>
 
@@ -136,7 +135,8 @@
 				<div class='inner'>
 					<h4>Main goal</h4>
 					<p class="sous-partie">
-						The section aims to correlate the films produced by country according to their genre and the awards
+						The section aims to correlate the films produced by country according to their genre and the
+						awards
 						received over time.
 						</br>
 						<i>Has a country been able to change the type of film it produces in order to have a better
@@ -156,8 +156,8 @@
 						<p>
 							It can be noted that France produces almost all possible genres and each of these genres
 							follow the same evolution, with the renown in agreement. <br\>
-							More films, more renown. We can therefore deduce that in addition to being a major film
-							producer, the films are of high quality.
+								More films, more renown. We can therefore deduce that in addition to being a major film
+								producer, the films are of high quality.
 						</p>
 						<h5>Comedia in Russia</h5>
 						<p>
@@ -209,15 +209,20 @@
 						After accumulating the general information with the two above visualizations, one may ask
 						himself how did the repartition of the countries, linked with the film genres, evolve
 						through time based on if the movie has been nominated or has won in the most prestigious
-						film ceremonies. What is the proportion of french drama movies that have won in the 60's? How many
+						film ceremonies. What is the proportion of french drama movies that have won in the 60's? How
+						many
 						comedy movies have been nominated these past 10 years in the USA?
 					</p>
 					<h4>How to use</h4>
 					<p class="sous-partie">
-						You can explore the questions stated above as well as many others in the visualization presented just below.
-						You can first start by selecting some time range you want to explore by clicking on one of the many ranges in the timeline.
-						You can then hover on one colorful line to get more details about the proportion of movies sharing the attributes where the line goes through.
-						One is also able to change the order of the parallel planes by clicking and moving one attribute to another place
+						You can explore the questions stated above as well as many others in the visualization presented
+						just below.
+						You can first start by selecting some time range you want to explore by clicking on one of the
+						many ranges in the timeline.
+						You can then hover on one colorful line to get more details about the proportion of movies
+						sharing the attributes where the line goes through.
+						One is also able to change the order of the parallel planes by clicking and moving one attribute
+						to another place
 						on the line it is on. This way, you are able to get many other insights that interest you.
 					</p>
 				</div>
