--- a/team.html
+++ b/team.html
@@ -86,16 +86,19 @@
 			</div>
 			<div class="cover-container">
 				<h4>Credits</h4>
-				<p>Meet <a href="./team.html">the authors here</a>. The project was created for the <a
+				<p>The project was created for the <a
 						href="http://edu.epfl.ch/coursebook/en/data-visualization-COM-480">Data Visualization</a>
 					course at EPFL.
 			</div>
 
-			<div class="mastfoot">
-				<div class="inner" style="position:relative; top:-20px;">
-					<p>Data Visualisation project </p>
+			<div class="cover-container">
+				<div class="mastfoot">
+					<div class="inner" style="position:relative; top:-20px;">
+						<p>Data Visualisation project </p>
+					</div>
 				</div>
 			</div>
+
 		</div>
 
 	</div>
