--- a/index.html
+++ b/index.html
@@ -104,20 +104,23 @@
 						</p>
 					</div>
 				</div>
-				<select id="year" name="year" class ='year_selector'>
-				  <script>
-					  var myDate = new Date();
-					  var year = myDate.getFullYear();
-					  for(var i = 1929; i < year+1; i++){
-							var option = '<option value="'+i+'"'
-							if(i == 2019){
-								var option = option + ' selected = "selected"';
-							}
-							option = option+ '>'+i+'</option>';
-						  document.write(option);//'<option value="'+i+'">'+i+'</option>');
-					  }
-				  </script>
-				</select>
+				<form class="need-validation" novalidate>
+					<label for='network_year'>Choose a year </label>
+					<select id="network_year" name="Year Selector" class ='mdb-select validate md-form'>
+					  <script>
+						  var myDate = new Date();
+						  var year = myDate.getFullYear();
+						  for(var i = 1929; i < year+1; i++){
+								var option = '<option value="'+i+'"'
+								if(i == 2019){
+									var option = option + ' selected = "selected"';
+								}
+								option = option+ '>'+i+'</option>';
+							  document.write(option);//'<option value="'+i+'">'+i+'</option>');
+						  }
+					  </script>
+					</select>
+				</form>
 				<div class = 'visu' id = 'visu_container'></div>
 
 
@@ -250,14 +253,14 @@
 	<!--<script src="map_visu.js"></script>-->
 	<script type="text/javascript" src="easyScrollDots.min.js"></script>
 	<script src="https://d3js.org/d3.v5.js"></script>
-	<script type = 'module' src="undirected_graph.js"></script>
 	<script>
 		d3version5 = d3
 	</script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://d3js.org/d3-array.v2.min.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
+	<script type = 'module' src="undirected_graph.js"></script>
 	<script src="stackedArea.js"></script>
 	<script src="parsets.js"></script>
 
