--- a/description.html
+++ b/description.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-	<link href="cover.css" rel="stylesheet">
+	<link href="css_files/cover.css" rel="stylesheet">
 
 
 
@@ -97,11 +97,11 @@
 					anybody looking for new visualisation of the world of film awards.</p>
 
 
-					<div class="mastfoot">
-						<div class="inner" style="position:relative; top:-20px;">
-							<p>Data Visualisation project </p>
-						</div>
+				<div class="mastfoot">
+					<div class="inner" style="position:relative; top:-20px;">
+						<p>Data Visualisation project </p>
 					</div>
+				</div>
 			</div>
 
 		</div>
