--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-	<link href="cover.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="easyScrollDots.min.css" />
-	<link rel="stylesheet" href="parsets.css">
+	<link href="css_files/cover.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css_files/easyScrollDots.min.css" />
+	<link rel="stylesheet" href="css_files/parsets.css">
 
 </head>
 
@@ -106,22 +106,22 @@
 				</div>
 				<form class="need-validation" novalidate>
 					<label for='network_year'>Choose a year </label>
-					<select id="network_year" name="Year Selector" class ='mdb-select validate md-form'>
-					  <script>
-						  var myDate = new Date();
-						  var year = myDate.getFullYear();
-						  for(var i = 1929; i < year+1; i++){
-								var option = '<option value="'+i+'"'
-								if(i == 2019){
+					<select id="network_year" name="Year Selector" class='mdb-select validate md-form'>
+						<script>
+							var myDate = new Date();
+							var year = myDate.getFullYear();
+							for (var i = 1929; i < year + 1; i++) {
+								var option = '<option value="' + i + '"'
+								if (i == 2019) {
 									var option = option + ' selected = "selected"';
 								}
-								option = option+ '>'+i+'</option>';
-							  document.write(option);//'<option value="'+i+'">'+i+'</option>');
-						  }
-					  </script>
+								option = option + '>' + i + '</option>';
+								document.write(option);//'<option value="'+i+'">'+i+'</option>');
+							}
+						</script>
 					</select>
 				</form>
-				<div class = 'visu' id = 'visu_container'></div>
+				<div class='visu' id='visu_container'></div>
 
 
 				<!--Anchor point (scroll indicator-->
@@ -251,7 +251,7 @@
 	</div>
 
 	<!--<script src="map_visu.js"></script>-->
-	<script type="text/javascript" src="easyScrollDots.min.js"></script>
+	<script type="text/javascript" src="js_files/easyScrollDots.min.js"></script>
 	<script src="https://d3js.org/d3.v5.js"></script>
 	<script>
 		d3version5 = d3
@@ -260,9 +260,9 @@
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://d3js.org/d3-array.v2.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
-	<script type = 'module' src="undirected_graph.js"></script>
-	<script src="stackedArea.js"></script>
-	<script src="parsets.js"></script>
+	<script type='module' src="js_files/undirected_graph.js"></script>
+	<script src="js_files/stackedArea.js"></script>
+	<script src="js_files/parsets.js"></script>
 
 	<script src="https://mbostock.github.com/d3/d3.js?2.5.0"></script>
 	<script>
