--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-	<link href="cover.css" rel="stylesheet">
+	<link href="css_files/cover.css" rel="stylesheet">
 
 
 </head>
