correct sunburst behavior on year change

--- a/index.html
+++ b/index.html
@@ -48,60 +48,7 @@
 					film ceremonies over time </h3>
 				<div class="jumbotron jumbotron-fluid">
 					<div class="container">
-						<h4>Introduction</h4>
-						<p>When the Oscar ceremony become questionnable, what can we learn from Cinema?
-							This work is an attempt to illustrate and ask multiple question about cinema,
-							culture, tendance in general.
-							From a serie of datasets, we manage to ask collected data about tacit rules
-							that are often kept deeply into our mind.</p>
-						<h4>What are the core visualization presented here</h4>
-						<h5>The Network</h5>
-						<p>
-							The network implemented here represents the country involved in the main film award events
-							in 2019. The blue nodes
-							represent the events, the orange one represent the countries. A contry is involved in an
-							event if at least one
-							film produced in this country is nominated in the event.
-						</p>
-						<h6>Interaction</h6>
-						<p>
-							You can drag any node you want. You can isolate the node of group (countries or event) next
-							to the other group to
-							ease the readibility of connections. For example, take a blue node, if you place it to the
-							right of the orange nodes,
-							it will keep its place, otherwise it will return to its original x-coordinate. The same idea
-							goes with an orange node.
-							A force exists between the nodes, so that they won't cover each other up.
-						</p>
-						<h6>Further Ideas</h6>
-						<p>
-							We want to bring text and legends in the visualization so that those explanation won't be
-							necessary anymore.
-							Also we aim to bring a timeline so that this example of 2019 can be extended to any year
-							that offers data in our datasets.
-							Also, we want the user to be able to click on an event to display a sequence sunburst
-							detailing what that event was in the
-							considered year.
-						</p>
-						<h5>The Sequence Sunburst</h5>
-						<p>
-							It represents the awards repartition (Oscar), the winners and nominees repartition, the
-							films/people repartition, and give
-							all the awards category repartition for the Academy Awards in 2019.
-						</p>
-						<h6>Interaction</h6>
-						<p>
-							You can put your mouse on any partition of the sequence and the latter would appear in
-							detail above the rings.
-						</p>
-						<h6>Further Ideas</h6>
-						<p>
-							The sunburst would appear and be updated according to the interaction the user woudl have
-							with the network as explained above :
-							clicking on a node representing an event. It would also be linked to the timeline of the
-							network so that an update of the
-							partitions would be triggered according to the new targeted year.
-						</p>
+
 					</div>
 				</div>
 				<form class="need-validation" novalidate>
@@ -138,7 +85,7 @@
 						</br>
 						<i>Has a country been able to change the type of film it produces in order to have a better
 							cinematic impact?</i>
-					<h4>Context</h4>
+					<h4>Story</h4>
 					<div class="sous-partie">
 						<h5>Pic of history impact in Iraq</h5>
 						<p>Observe a pic of an historical film production around 2011
