--- a/index.html
+++ b/index.html
@@ -43,9 +43,22 @@
 				<div>
 					<div class="scroll-indicator" id="presentation" data-scroll-indicator-title="Context"></div>
 				</div>
-
+				<h3 class="parties">Introduction </h3>
+					<p class="sous-partie">
+						There are many film awards and, from the point of view of countries, the fact that a film is awarded or nominated increases the country's international influence. Obtaining an award widens the audience, leading to a better knowledge of a specific country or the desire to discover it. An award is of course a considerable price for directors, actors, actresses and all the team involved but also for the country who hosts it.
+						Ireland and Croatia are examples of those countries that have seen their tourists number explode thanks to the famous “Game of Thrones” series. New Zealand recorded a 40% increase in tourism between 2000 and 2006 with his “Lord of the Rings”, notably the town of Hobbiton. Moreover Kazakhstan just after “Borat” with a 300% increase in tourism. There is also Marseille in France with “Plus Belle la Vie”, Miami in USA with “Dexter”, Albuquerque with “Breaking Bad”, Tunisia with “Stars Wars” and many others.
+						One may therefore wonder to what extent the ceramonies reflect the cinematographic tendencies of the countries.
+						It is an attempt to capture by country a certain trend of cinematographic interest of its population, these productions and then their international renown over a century. Cinematographic trends are represented by film genres such as Dramas or Science-Fiction. By doing so, we would like to observe if a film-producing country is gradually changing the type of film it hosts in order to be more represented during the film award ceremonies.
+						In order to answer this problematic, we first want to report on the relationship between films and countries by considering that a country is linked to an event if and only if at least one film or person from that country has been nominated for an award at that event. Also we will analyze what an event is in order to report on how a country is represented by an event. In this way, we will see in a second step how a country's film trends have evolved over time compared to the evolution of these nominations and awards in events. Finally, our analysis will lead us to describe by period the distribution of genres by country in relation to the distribution of genres by event winners and nominees.
+					</p>
 				<h3 class="parties">Context- Which countries are represented in which
 					film ceremonies over time </h3>
+					<h4>Main goal</h4>
+					<p class="sous-partie">
+
+					<h4>Story</h4>
+					<div class="sous-partie">
+
 				<div class="jumbotron jumbotron-fluid">
 					<div class="container">
 
@@ -68,7 +81,11 @@
 						</script>
 					</select>
 				</form>
-				<div class='visu' id='visu_container'></div>
+				<div class='visu' id='context_global_container'></div>
+				<h4>How to use</h4>
+				<p class="sous-partie">
+				
+				</p>
 
 
 				<!--Anchor point (scroll indicator-->
