Corrected parallel sets display + added story part

--- a/index.html
+++ b/index.html
@@ -180,13 +180,25 @@
 
 				<h3 class='parties'>Conclusion - Overview of countries trends through cinema awards</h3>
 				<div class='inner'>
-					<p>
+				<h4>Main Goal</h4>
+					<p class="sous-partie">
 						After accumulating the general information with the two above visualizations, one may ask
 						himself how did the repartition of the countries, linked with the film genres, evolve
 						through time based on if the movie has been nominated or has won in the most prestigious
-						film ceremonies. What is the proportion of french drama movies that have won in the 60's? How
-						many
-						comedy movies have been nominated these past 10 years in the USA?
+						film ceremonies. <i>What is the proportion of french drama movies that have won in the 60's? How
+						many comedy movies have been nominated these past 10 years in the USA?</i>
+					</p>
+					<h4>Story</h4>
+					<p class="sous-partie">
+					  One may be interested to get more insights on how the romance and thriller genre has evolved through different ranges of time.
+						Indeed by having a look at the 30s, we have 26% of romance movies and 1% of thriller movies, which took part in famous ceremonies,
+						present in the 6 pre-selected countries and 8 pre-selected genres. The romance proportion decreases at the beginning of the new century
+						to 11%. By having a better look at the parallel sets, one sees that thriller films have errupted in the 2000's and are now more
+						present in the cinematic industry, which also permitted to give birth to new awards in the movie ceremonies.
+
+						If we now try to have insights on which genre of movies has been winning in the USA, one can observe that the drama genre
+						has always been the most winning genre of that country. One can as well state that the USA have always tried to award every other movie genre fairly,
+						with the expection of drama films. 
 					</p>
 					<h4>How to use</h4>
 					<p class="sous-partie">
