--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				<h3 class="parties">Introduction </h3>
 					<p class="sous-partie" >
 						There are many film awards and, from the point of view of countries, the fact that a film is awarded or nominated increases the country's international influence. Obtaining an award widens the audience, leading to a better knowledge of a specific country or the desire to discover it. An award is of course a considerable price for directors, actors, actresses and all the team involved but also for the country who hosts it. <br />
-						Ireland and Croatia are examples of those countries that have seen their tourists number explode thanks to the famous “Game of Thrones” series. New Zealand recorded a 40% increase in tourism between 2000 and 2006 with his “Lord of the Rings”, notably the town of Hobbiton. Moreover Kazakhstan just after “Borat” with a 300% increase in tourism. There is also Marseille in France with “Plus Belle la Vie”, Miami in USA with “Dexter”, Albuquerque with “Breaking Bad”, Tunisia with “Stars Wars” and many others.<br /><br />
+						<br />Ireland and Croatia are examples of those countries that have seen their tourists number explode thanks to the famous “Game of Thrones” series. New Zealand recorded a 40% increase in tourism between 2000 and 2006 with his “Lord of the Rings”, notably the town of Hobbiton. Moreover Kazakhstan just after “Borat” with a 300% increase in tourism. There is also Marseille in France with “Plus Belle la Vie”, Miami in USA with “Dexter”, Albuquerque with “Breaking Bad”, Tunisia with “Stars Wars” and many others.<br /><br />
 						One may therefore wonder to what extent the ceramonies reflect the cinematographic tendencies of the countries.<br /><br />
-						It is an attempt to capture by country a certain trend of cinematographic interest of its population, these productions and then their international renown over a century. Cinematographic trends are represented by film genres such as Dramas or Science-Fiction. By doing so, we would like to observe if a film-producing country is gradually changing the type of film it hosts in order to be more represented during the film award ceremonies.<br />
-						In order to answer this problematic, we first want to report on the relationship between films and countries by considering that a country is linked to an event if and only if at least one film or person from that country has been nominated for an award at that event. Also we will analyze what an event is in order to report on how a country is represented by an event. In this way, we will see in a second step how a country's film trends have evolved over time compared to the evolution of these nominations and awards in events. Finally, our analysis will lead us to describe by period the distribution of genres by country in relation to the distribution of genres by event winners and nominees.
+						<br />It is an attempt to capture by country a certain trend of cinematographic interest of its population, these productions and then their international renown over a century. Cinematographic trends are represented by film genres such as Dramas or Science-Fiction. By doing so, we would like to observe if a film-producing country is gradually changing the type of film it hosts in order to be more represented during the film award ceremonies.<br />
+						<br />In order to answer this problematic, we first want to report on the relationship between films and countries by considering that a country is linked to an event if and only if at least one film or person from that country has been nominated for an award at that event. Also we will analyze what an event is in order to report on how a country is represented by an event. In this way, we will see in a second step how a country's film trends have evolved over time compared to the evolution of these nominations and awards in events. Finally, our analysis will lead us to describe by period the distribution of genres by country in relation to the distribution of genres by event winners and nominees.
 					</p>
 				<h3 class="parties">Context- Which countries are represented in which
 					film ceremonies over time </h3>
@@ -60,6 +60,7 @@
 					<h4>Story</h4>
 					<p class="sous-partie">
 						In the network, an event is linked to a country if and only if at least a film or a person from this country has been nominated for a price of this event in a pre-selected year. We considered 9 of the most famous events and each network takes into account the twenty most represented countries in the events during the selected year. Through the network of 2019 we can see for example that the USA are implied in every event. This can be explained by the huge movie industry of that country. On the opposite, Ireland is only involved in 4 events : the Academy, BAFAT, Satellite and Sundance Film Awards. Also, more generally we observe that each event is linked to a lot of countries, which shows the globalisation of this industry and hence shows the importance of it for the influence of countries. This density can be compared to the one in 1979 : the network of that time is less dense and involves only 6 events. <br />
+						<br />
 						If we now observe the composition of the Academy Awards in 2019, we see that they mainly consist of the Oscars which mostly reward films. The Cannes Film Festival is much more complex, as it consists of many more prizes. Similarly they mostly reward films. The Satellite Awards are the only event that rewards approximately as many films as people. Globally there is always more nominees than winners, that is expected as for example in the Oscar for the best Film in the Academy Awards of 2019 had one winner for 7 nominees. By oberserving other times, we can conclude that the composition of an event is not fixed : the number of prizes and the distributions can vary throught time.
 					</p>
 				<div class="jumbotron jumbotron-fluid">
@@ -86,7 +87,7 @@
 				</form>
 				<div class='visu' id='context_global_container'></div>
 				<h4>How to use</h4>
-				<ul class="sous-partie">
+				<ul class="sous-partie" style="margin-left: 50px;">
 					<li>
 						Selecting a year with the selector will display the new network and remove the previous selected sunburst if it exists.
 					</li>
@@ -163,13 +164,18 @@
 					<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
 				</div>
 				<h4>How to use</h4>
-				<p class="sous-partie">
-					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
-					<br />
-					You can zoom in each graph by dragging a selecting box to extend the desired zone. <br />
-					You can choose how you want to visualize the data : by proportion or with the corresponding number
-					of film produced.
-				</p>
+				<ul class="sous-partie" style="margin-left: 50px;">
+					<li>
+						You can put your mouse on any genre or type of award to highlight the corresponding evolution.
+					</li>
+					<li>
+						You can zoom in each graph by dragging a selecting box to extend the desired zone.
+					</li>
+					<li>
+						You can choose how you want to visualize the data : by proportion or with the corresponding number
+						of film produced.
+					</li>
+				</ul>
 
 
 				<!--Anchor point (scroll indicator-->
@@ -195,22 +201,29 @@
 						present in the 6 pre-selected countries and 8 pre-selected genres. The romance proportion decreases at the beginning of the new century
 						to 11%. By having a better look at the parallel sets, one sees that thriller films have errupted in the 2000's and are now more
 						present in the cinematic industry, which also permitted to give birth to new awards in the movie ceremonies.
-
-						If we now try to have insights on which genre of movies has been winning in the USA, one can observe that the drama genre
+						<br /><br />If we now try to have insights on which genre of movies has been winning in the USA, one can observe that the drama genre
 						has always been the most winning genre of that country. One can as well state that the USA have always tried to award every other movie genre fairly,
-						with the expection of drama films. 
+						with the expection of drama films.
 					</p>
 					<h4>How to use</h4>
 					<p class="sous-partie">
 						You can explore the questions stated above as well as many others in the visualization presented
 						just below.
-						You can first start by selecting some time range you want to explore by clicking on one of the
-						many ranges in the timeline.
-						You can then hover on one colorful line to get more details about the proportion of movies
-						sharing the attributes where the line goes through.
-						One is also able to change the order of the parallel planes by clicking and moving one attribute
-						to another place
-						on the line it is on. This way, you are able to get many other insights that interest you.
+						<ul class="sous-partie" style="margin-left: 50px;">
+						<li>
+							You can first start by selecting some time range you want to explore by clicking on one of the
+							many ranges in the timeline.
+						</li>
+						<li>
+							You can then hover on one colorful line to get more details about the proportion of movies
+							sharing the attributes where the line goes through.
+						</li>
+						<li>
+							You are also able to change the order of the parallel planes by clicking and moving one attribute
+							to another place on the line it is on. This way, you are able to get many other insights that interest you.
+						</li>
+					</ul>
+
 					</p>
 				</div>
 				<div class="visu" style="text-align:center">
