corrected footer and timerange

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 				<div class="mastfoot">
 					<div class="inner" style="position:relative; top:-20px;">
-						<p>Data Visualisation project </p>
+						<p>Data Visualization project </p>
 					</div>
 				</div>
 
