--- a/team.html
+++ b/team.html
@@ -94,7 +94,7 @@
 			<div class="cover-container">
 				<div class="mastfoot">
 					<div class="inner" style="position:relative; top:-20px;">
-						<p>Data Visualisation project </p>
+						<p>Data Visualization project </p>
 					</div>
 				</div>
 			</div>
