remove class for year selector

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 					</div>
 				</div>
-				<form class="need-validation" novalidate>
+				<form>
 					<label for='network_year'>Choose a year </label>
 					<select id="network_year" name="Year Selector" class='mdb-select validate md-form'>
 						<script>
