change text in team.html

--- a/team.html
+++ b/team.html
@@ -35,33 +35,12 @@
 						</nav>
 					</div>
 				</div>
-
-				<div class="container">
-					<h4 class="cover-heading-team">Introduction</h4>
-					<p>
-						This visualization unveils the deepest mysteries of our world,
-						showing the facts through the lens of statistical data anlysis
-						and colorful animations.
-						The truth shines brightly and guides the lost minds.
-					</p>
-					<p>
-						We investigate the changes in population of alligators in Lac Léman
-						over the last century and extrapolate the trend to predict
-						a world of reptile domination.
-						Read more <a href="description.html">about our model</a>
-						or the <a href="data.html">sources of our data</a>.
-					</p>
-
-					<h4 class="cover-heading">How to use</h4>
-					<p>
-						Here we would tell you how to interact with the plot below.
-						Sadly, it is not interactive at this stage of the project.
-						Please imagine that the plot is interactive and that clicking on it
-						activates captivating animations.
-					</p>
-				</div>
 			</div>
-			<div class='cover-container'>
+			<div class="cover-container" style="margin-top:100px;">
+				<h4>Credits</h4>
+				<p>
+					You can find below the names of the team members who took part in the conception and creation of this website:
+				</p>
 				<div class="card-deck">
 					<div class="card">
 						<div class="card-body">
@@ -82,9 +61,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="cover-container">
-				<h4>Credits</h4>
 				<p>The project was created for the <a
 						href="http://edu.epfl.ch/coursebook/en/data-visualization-COM-480">Data Visualization</a>
 					course at EPFL.
